[profile.dev]
opt-level = 1
debug = "line-tables-only"
[profile.dev.package."*"]
opt-level = 3
debug = "none"

[workspace]
resolver = "2"
members = [ "api", "common", "modules/fs",
	"mqjs"
]
exclude = ["rquickjs"]

[workspace.lints.rust]
dead_code = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
uninlined_format_args = "allow"
missing_panics_doc = "allow"
needless_return = "allow"

[workspace.dependencies]
rquickjs = {version = "0.6", features = ["futures", "loader", "dyn-load", "macro"]}
# rquickjs = {path = "rquickjs", features = ["futures", "loader", "dyn-load"]}
tokio = {version = "1.40", default-features = false, features = ["rt", "fs", "macros"]}
api = {path = "api"}
common = {path = "common"}
