[profile.dev]
opt-level = 1
debug = "line-tables-only"
[profile.dev.package."*"]
opt-level = 3
debug = "none"

[workspace]
resolver = "2"
members = [ "api", "common",
	"mqjs"
]
exclude = ["rquickjs"]

[workspace.lints.rust]
dead_code = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
uninlined_format_args = "allow"
missing_panics_doc = "allow"
missing_errors_doc = "allow"
needless_return = "allow"
redundant_else = "allow"
module_name_repetitions = "allow"
similar_names = "allow"

[workspace.dependencies]
rquickjs = {version = "0.6", features = ["futures", "loader", "dyn-load", "macro"]}
# rquickjs = {path = "rquickjs", features = ["futures", "loader", "dyn-load"]}
api = {path = "api"}
futures-lite = {version = "2.3", default-features = false, features = ["std"]}
async-channel = {version = "2.3", default-features = false, features = ["std"]}
common = {path = "common"}
