[package]
name = "mqjs"
version = "0.1.0"
edition = "2021"

[dependencies]
rquickjs.workspace = true
futures-lite.workspace = true
futures-executor.workspace = true
futures-channel.workspace = true
async-executor.workspace = true
async-channel.workspace = true
threadpool.workspace = true
api.workspace = true
common.workspace = true
signal.workspace = true

[lints]
workspace = true
